# pyMeticulous

./: .flake8  .gitignore  API_SPEC.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflow/: build.yml
.github/workflows/: build.yml  python-publish.yml
examples/: connect_socketio.py  device_info_and_stats.py  event_throttling.py  history_search_and_rating.py  load_change_and_execute.py  socketio_actions.py  wifi_management.py
meticulous/: __init__.py  api.py  api_types.py  profile.py
tests/: __init__.py  mock_responses.py  test_api.py  test_models.py  test_new_endpoints.py  test_profiles.py  test_rest_api.py  test_socketio.py
tests/integration/: README.md  __init__.py  local_config.example.py  test_api_endpoints.py  test_safe_posts.py  test_socketio.py  utils.py
tests/smoke/: RESULTS.md  report.md  test_api_endpoints.py  test_safe_posts.py  test_socketio.py  utils.py
