[project]
name = "pyMeticulous"
version = "0.2.0"
description = "Integration with the meticulouscoffee machine via its REST API"
authors = [{ name = "Meticulous", email = "support@meticuloushome.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "pydantic>=2.7.3",
    "python-socketio>=5.11.2",
    "websocket-client>=1.8.0",
    "zstandard>=0.22.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest>=8.2.2", "flake8>=7.0.0", "flake8-deprecated>=1.3.0"]
